# opendeviceio

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-plugins.yml
apps/web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AuthNav.tsx  (+9 more)
docs/: DESIGN.md  SPECIFICATION.md
examples/: av-processor-crosscutting.odio.json  extron-dtp2-t-211.odio.json  generic-dsp-8gpio.odio.json  lightware-ucx-4x2-hc60d.odio.json  netgear-m4250-poe.odio.json
examples/bundles/: crestron-uc-cx100-t-wm.odio.json  example-modular-frame-configured.odio.json
examples/invalid/: missing-required-device.odio.json  other-connector-no-name.odio.json  unknown-core-field.odio.json
genie/: README.md  pyproject.toml
genie/odio_genie/: __init__.py  batch.py  cli.py  env.py  extractor.py  models.py  pipeline.py
genie/tests/: conftest.py  test_batch.py  test_bundle.py  test_cli.py  test_conformance.py  test_env.py  test_ingest.py  test_pipeline.py  test_scorer.py
integrations/: RELEASING.md  SIGNING-SETUP.md
integrations/autocad/: OdioImport.csproj  PackageContents.xml  README.md
integrations/indesign/: README.md  index.html  index.js  manifest.json
integrations/visio/: OdioToVisio.csproj  README.md
schema/v0.1/: bundle.schema.json  cable.schema.json  device.schema.json
tools/: scrape-crestron.mjs  scrape-shure.mjs  seed-registry.mjs  validate-examples.mjs
(+47 files in other folders)
