[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odio-genie"
version = "0.1.0"
description = "Genie - the OpenDeviceIO (ODIO) spec-sheet importer: turns device datasheets into schema-validated, confidence-flagged .odio.json drafts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenDeviceIO" }]
keywords = ["opendeviceio", "odio", "av", "datasheet", "importer", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia",
]
dependencies = [
    "jsonschema>=4.18",
    "pydantic>=2",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.11", "pymupdf>=1.24"]
llm = ["anthropic>=0.40"]
dev = ["pytest>=7"]

[project.scripts]
genie = "odio_genie.cli:main"

[tool.setuptools]
packages = ["odio_genie"]

[tool.setuptools.package-data]
odio_genie = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
consider_namespace_packages = true
